Fixed cards overflow

--- a/css/main/slider.css
+++ b/css/main/slider.css
@@ -134,3 +134,17 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 1420px) and (min-width: 1081px) {
+    #plans-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
+    .slider {
+        flex-wrap: wrap;
+        width: 1000px;
+        height: 510px;
+    }
+}
